--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <div class="collapse navbar-collapse" id="collapsibleNavbar">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item">
-                            <a class="nav-link" href="how-it-works.html">How It works</a>
+                            <a class="nav-link" href="how-docbrains-works/index.html">How It works</a>
                         </li>
                         <li class="nav-item dropdown d-none d-lg-block">
                             <a class="nav-link" href="industry-solutions.html">Industry Solutions <i
