--- a/index.html
+++ b/index.html
@@ -58,43 +58,43 @@
                             <a class="nav-link" href="how-docbrains-works/">How It works</a>
                         </li>
                         <li class="nav-item dropdown d-none d-lg-block">
-                            <a class="nav-link" href="industry-solutions.html">Industry Solutions <i
+                            <a class="nav-link" href="solutions/">Industry Solutions <i
                                     class="fa fa-caret-down" aria-hidden="true"></i></a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="invoicing.html"> Invoice and Account Payables</a>
+                                <li><a class="dropdown-item" href="solutions/pdf-invoice-processing-account-payable/"> Invoice and Account Payables</a>
                                 </li>
-                                <li><a class="dropdown-item" href="shipping-and-delivery-orders.html"> Shipping and
+                                <li><a class="dropdown-item" href="solutions/shipping-delivery-orders-processing/"> Shipping and
                                         Delivery Orders</a></li>
-                                <li><a class="dropdown-item" href="form-based-documents.html"> Form-Based Contracts</a>
+                                <li><a class="dropdown-item" href="solutions/legal-documents-processing/"> Form-Based Contracts</a>
                                 </li>
-                                <li><a class="dropdown-item" href="hr-and-administrative.html"> HR and
+                                <li><a class="dropdown-item" href="solutions/hr-process-automation-cv-read/"> HR and
                                         Administrative</a></li>
-                                <li><a class="dropdown-item" href="bank-and-credit-card-statement.html"> Bank and Credit
+                                <li><a class="dropdown-item" href="solutions/bank-credit-card-statements-parser/"> Bank and Credit
                                         Card Statements</a></li>
-                                <li><a class="dropdown-item" href="kyc-documents.html"> KYC Documents</a></li>
+                                <li><a class="dropdown-item" href="solutions/kyc-document-processing-parser/"> KYC Documents</a></li>
                             </ul>
                         </li>
                         <li class="nav-item dropdown  d-block d-lg-none">
                             <a class="nav-link  dropdown-toggle" href="#" data-toggle="dropdown">Industry Solutions </a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="invoicing.html"> Invoice and Account Payables</a>
+                                <li><a class="dropdown-item" href="solutions/pdf-invoice-processing-account-payable/"> Invoice and Account Payables</a>
                                 </li>
-                                <li><a class="dropdown-item" href="shipping-and-delivery-orders.html"> Shipping and
+                                <li><a class="dropdown-item" href="solutions/shipping-delivery-orders-processing/"> Shipping and
                                         Delivery Orders</a></li>
-                                <li><a class="dropdown-item" href="form-based-documents.html"> Form-Based Contracts</a>
+                                <li><a class="dropdown-item" href="solutions/legal-documents-processing/"> Form-Based Contracts</a>
                                 </li>
-                                <li><a class="dropdown-item" href="hr-and-administrative.html"> HR and
+                                <li><a class="dropdown-item" href="solutions/hr-process-automation-cv-read/"> HR and
                                         Administrative</a></li>
-                                <li><a class="dropdown-item" href="bank-and-credit-card-statement.html"> Bank and Credit
+                                <li><a class="dropdown-item" href="solutions/bank-credit-card-statements-parser/"> Bank and Credit
                                         Card Statements</a></li>
-                                <li><a class="dropdown-item" href="kyc-documents.html"> KYC Documents</a></li>
+                                <li><a class="dropdown-item" href="solutions/kyc-document-processing-parser/"> KYC Documents</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="pricing.html">Pricing</a>
+                            <a class="nav-link" href="docbrains-campaign-pricing/">Pricing</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="contact.html">contact Us</a>
+                            <a class="nav-link" href="contact-sales/">contact Us</a>
                         </li>
                         <li class="nav-item">
                             <a class="agi-btn" href="#"> <i class="fa fa-user-circle-o" aria-hidden="true"></i>
@@ -384,7 +384,7 @@
                         Learn the Cost of your <span class="blink"><b>AGI campaign</b></span> Right
                         Now!</h1>
                     <div class="text-center wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.2s">
-                        <a href="#" class="agi-btn">View All Pricing</a>
+                        <a href="docbrains-campaign-pricing/" class="agi-btn">View All Pricing</a>
 
                     </div>
                 </div>
@@ -403,11 +403,11 @@
                         <div>
                             <ul class="footer-link">
                                 <li><a href="index.html">Home</a></li>
-                                <li><a href="how-it-works.html">How It Works</a></li>
-                                <li><a href="industry-solutions.html">Industry Solution</a></li>
-                                <li><a href="pricing.html">Pricing</a></li>
-                                <li><a href="blogs.html">Blogs</a></li>
-                                <li><a href="contact.html">Contact Us</a></li>
+                                <li><a href="how-docbrains-works/">How It Works</a></li>
+                                <li><a href="solutions/">Industry Solution</a></li>
+                                <li><a href="docbrains-campaign-pricing/">Pricing</a></li>
+                                <li><a href="blogs/">Blogs</a></li>
+                                <li><a href="contact-sales/">Contact Us</a></li>
                             </ul>
                         </div>
                     </div>
@@ -415,12 +415,12 @@
                         <h5 class="footer-title">Industry Solution</h5>
                         <div>
                             <ul class="footer-link">
-                                <li><a href="invoicing.html">Invoicing</a></li>
-                                <li><a href="shipping-and-delivery-orders.html">Shipping and Delivery</a></li>
-                                <li><a href="form-based-documents.html">Form Based Documents</a></li>
-                                <li><a href="hr-and-administrative.html">Hr & Administrative</a></li>
-                                <li><a href="bank-and-credit-card-statement.html">Bank & Credit Card Statements</a></li>
-                                <li><a href="kyc-documents.html">KYC Documents</a></li>
+                                <li><a href="solutions/pdf-invoice-processing-account-payable/">Invoicing</a></li>
+                                <li><a href="solutions/shipping-delivery-orders-processing/">Shipping and Delivery</a></li>
+                                <li><a href="solutions/legal-documents-processing/">Form Based Documents</a></li>
+                                <li><a href="solutions/hr-process-automation-cv-read/">Hr & Administrative</a></li>
+                                <li><a href="solutions/bank-credit-card-statements-parser/">Bank & Credit Card Statements</a></li>
+                                <li><a href="solutions/kyc-document-processing-parser/">KYC Documents</a></li>
 
                             </ul>
                         </div>
@@ -486,7 +486,7 @@
                 </div>
                 <div class="col-lg-6 d-none d-lg-block">
                     <ul class="list-inline pull-right">
-                        <li class="list-inline-item"><a href="privacy-policy.html">Privacy Policy</a></li>
+                        <li class="list-inline-item"><a href="terms-privacy-policy/">Privacy Policy</a></li>
                         <!-- <li class="list-inline-item"><a href="#">News</a></li> -->
                     </ul>
                 </div>
