--- a/how-docbrains-works/index.html
+++ b/how-docbrains-works/index.html
@@ -58,7 +58,7 @@
                             <a class="nav-link" href="../how-docbrains-works/">How It works</a>
                         </li>
                         <li class="nav-item dropdown d-none d-lg-block">
-                            <a class="nav-link" href="../solutions/index.html">Industry Solutions <i
+                            <a class="nav-link" href="../solutions/">Industry Solutions <i
                                     class="fa fa-caret-down" aria-hidden="true"></i></a>
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="../solutions/pdf-invoice-processing-account-payable/"> Invoice and Account Payables</a>
