--- a/solutions/index.html
+++ b/solutions/index.html
@@ -77,7 +77,7 @@
                         <li class="nav-item dropdown  d-block d-lg-none">
                             <a class="nav-link  dropdown-toggle" href="#" data-toggle="dropdown">Industry Solutions </a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="../solutions/pdf-invoice-processing-account-payable/invoicing.html"> Invoice and Account Payables</a>
+                                <li><a class="dropdown-item" href="../solutions/pdf-invoice-processing-account-payable/"> Invoice and Account Payables</a>
                                 </li>
                                 <li><a class="dropdown-item" href="../solutions/shipping-delivery-orders-processing/shipping-and-delivery-orders.html"> Shipping and
                                         Delivery Orders</a></li>
