--- a/solutions/index.html
+++ b/solutions/index.html
@@ -79,22 +79,22 @@
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="../solutions/pdf-invoice-processing-account-payable/"> Invoice and Account Payables</a>
                                 </li>
-                                <li><a class="dropdown-item" href="../solutions/shipping-delivery-orders-processing/shipping-and-delivery-orders.html"> Shipping and
+                                <li><a class="dropdown-item" href="../solutions/shipping-delivery-orders-processing/"> Shipping and
                                         Delivery Orders</a></li>
-                                <li><a class="dropdown-item" href="../solutions/legal-documents-processing/form-based-documents.html"> Form-Based Contracts</a>
+                                <li><a class="dropdown-item" href="../solutions/legal-documents-processing/"> Form-Based Contracts</a>
                                 </li>
-                                <li><a class="dropdown-item" href="../solutions/hr-process-automation-cv-read/hr-and-administrative.html"> HR and
+                                <li><a class="dropdown-item" href="../solutions/hr-process-automation-cv-read/"> HR and
                                         Administrative</a></li>
-                                <li><a class="dropdown-item" href="../solutions/bank-credit-card-statements-parser/bank-and-credit-card-statement.html"> Bank and Credit
+                                <li><a class="dropdown-item" href="../solutions/bank-credit-card-statements-parser/"> Bank and Credit
                                         Card Statements</a></li>
-                                <li><a class="dropdown-item" href="../solutions/kyc-document-processing-parser/kyc-documents.html"> KYC Documents</a></li>
+                                <li><a class="dropdown-item" href="../solutions/kyc-document-processing-parser/"> KYC Documents</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="pricing.html">Pricing</a>
+                            <a class="nav-link" href="../docbrains-campaign-pricing/">Pricing</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="contact.html">contact Us</a>
+                            <a class="nav-link" href="../contact-sales/">contact Us</a>
                         </li>
                         <li class="nav-item">
                             <a class="agi-btn" href="#"> <i class="fa fa-user-circle-o" aria-hidden="true"></i>
@@ -279,12 +279,12 @@
                         <h5 class="footer-title">Menu </h5>
                         <div>
                             <ul class="footer-link">
-                                <li><a href="index.html">Home</a></li>
-                                <li><a href="how-it-works.html">How It Works</a></li>
-                                <li><a href="industry-solutions.html">Industry Solution</a></li>
-                                <li><a href="pricing.html">Pricing</a></li>
-                                <li><a href="blogs.html">Blogs</a></li>
-                                <li><a href="contact.html">Contact Us</a></li>
+                                <li><a href="http://www.agibrains.com/">Home</a></li>
+                                <li><a href="../how-docbrains-works/">How It Works</a></li>
+                                <li><a href="../solutions/">Industry Solution</a></li>
+                                <li><a href="../docbrains-campaign-pricing/">Pricing</a></li>
+                                <li><a href="../blogs/">Blogs</a></li>
+                                <li><a href="../contact-sales/">Contact Us</a></li>
                             </ul>
                         </div>
                     </div>
@@ -363,7 +363,7 @@
                 </div>
                 <div class="col-lg-6 d-none d-lg-block">
                     <ul class="list-inline pull-right">
-                        <li class="list-inline-item"><a href="privacy-policy.html">Privacy Policy</a></li>
+                        <li class="list-inline-item"><a href="../terms-privacy-policy/">Privacy Policy</a></li>
                         <!-- <li class="list-inline-item"><a href="#">News</a></li> -->
                     </ul>
                 </div>
@@ -540,9 +540,9 @@
             $('.toggle').toggleClass('active')
         })
     </script>
-     <script src="js/validation/jquery.validate.min.js"></script>
-     <script src="js/validation/additional-methods.min.js"></script>
-     <script src="js/validation/checkvalidation.js"></script>
+     <script src="../js/validation/jquery.validate.min.js"></script>
+     <script src="../js/validation/additional-methods.min.js"></script>
+     <script src="../js/validation/checkvalidation.js"></script>
 </body>
 
 </html>
