--- a/solutions/index.html
+++ b/solutions/index.html
@@ -292,12 +292,12 @@
                         <h5 class="footer-title">Industry Solution</h5>
                         <div>
                             <ul class="footer-link">
-                                <li><a href="invoicing.html">Invoicing</a></li>
-                                <li><a href="shipping-and-delivery-orders.html">Shipping and Delivery</a></li>
-                                <li><a href="form-based-documents.html">Form Based Documents</a></li>
-                                <li><a href="hr-and-administrative.html">Hr & Administrative</a></li>
-                                <li><a href="bank-and-credit-card-statement.html">Bank & Credit Card Statements</a></li>
-                                <li><a href="kyc-documents.html">KYC Documents</a></li>
+                                <li><a href="../solutions/pdf-invoice-processing-account-payable/">Invoicing</a></li>
+                                <li><a href="../solutions/shipping-delivery-orders-processing/">Shipping and Delivery</a></li>
+                                <li><a href="../solutions/legal-documents-processing/">Form Based Documents</a></li>
+                                <li><a href="../solutions/hr-process-automation-cv-read/">Hr & Administrative</a></li>
+                                <li><a href="../solutions/bank-credit-card-statements-parser/">Bank & Credit Card Statements</a></li>
+                                <li><a href="../solutions/kyc-document-processing-parser/">KYC Documents</a></li>
 
                             </ul>
                         </div>
@@ -455,7 +455,7 @@
         </div>
     </div>
     <!-- mobile orange button -->
-    <a href="contact.html" class="d-block d-md-none btn orangeBtn get-in-touch-mobile">Begin the free On-boarding</a>
+    <a href="../contact-sales/" class="d-block d-md-none btn orangeBtn get-in-touch-mobile">Begin the free On-boarding</a>
     <!--End mobile orange button -->
     <!-- End Pilot Button  -->
 
