--- a/solutions/index.html
+++ b/solutions/index.html
@@ -61,17 +61,17 @@
                             <a class="nav-link" href="../solutions/index.html">Industry Solutions <i
                                     class="fa fa-caret-down" aria-hidden="true"></i></a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="../solutions/pdf-invoice-processing-account-payable/invoicing.html"> Invoice and Account Payables</a>
+                                <li><a class="dropdown-item" href="../solutions/pdf-invoice-processing-account-payable/"> Invoice and Account Payables</a>
                                 </li>
-                                <li><a class="dropdown-item" href="../solutions/shipping-delivery-orders-processing/shipping-and-delivery-orders.html"> Shipping and
+                                <li><a class="dropdown-item" href="../solutions/shipping-delivery-orders-processing/"> Shipping and
                                         Delivery Orders</a></li>
-                                <li><a class="dropdown-item" href="../solutions/legal-documents-processing/form-based-documents.html"> Form-Based Contracts</a>
+                                <li><a class="dropdown-item" href="../solutions/legal-documents-processing/"> Form-Based Contracts</a>
                                 </li>
-                                <li><a class="dropdown-item" href="../solutions/hr-process-automation-cv-read/hr-and-administrative.html"> HR and
+                                <li><a class="dropdown-item" href="../solutions/hr-process-automation-cv-read/"> HR and
                                         Administrative</a></li>
-                                <li><a class="dropdown-item" href="../solutions/bank-credit-card-statements-parser/bank-and-credit-card-statement.html"> Bank and Credit
+                                <li><a class="dropdown-item" href="../solutions/bank-credit-card-statements-parser/"> Bank and Credit
                                         Card Statements</a></li>
-                                <li><a class="dropdown-item" href="../solutions/kyc-document-processing-parser/kyc-documents.html"> KYC Documents</a></li>
+                                <li><a class="dropdown-item" href="../solutions/kyc-document-processing-parser/"> KYC Documents</a></li>
                             </ul>
                         </li>
                         <li class="nav-item dropdown  d-block d-lg-none">
