--- a/solutions/index.html
+++ b/solutions/index.html
@@ -142,7 +142,7 @@
                                         lot of manual intervention in processing such inbound documents. An automated
                                         solution can solve the hours of manual effort</span>
                                 </p>
-                                <a class="agi-btn" href="invoicing.html">Read More</a>
+                                <a class="agi-btn" href="../solutions/pdf-invoice-processing-account-payable/">Read More</a>
                             </div>
                         </div>
                     </div>
@@ -161,7 +161,7 @@
                                         useful for us.
                                     </span>
                                 </p>
-                                <a class="agi-btn" href="shipping-and-delivery-orders.html">Read More</a>
+                                <a class="agi-btn" href="../solutions/shipping-delivery-orders-processing/">Read More</a>
                             </div>
                         </div>
                     </div>
@@ -180,7 +180,7 @@
                                         vendors, Customers, Employees, Their schedules reports, Certificates, Orders and
                                         work-related documents have been handled by printing information</span>
                                 </p>
-                                <a class="agi-btn" href="form-based-documents.html">Read More</a>
+                                <a class="agi-btn" href="../solutions/legal-documents-processing/">Read More</a>
                             </div>
                         </div>
                     </div>
@@ -199,7 +199,7 @@
                                         it would be difficult to focus on other projects
                                     </span>
                                 </p>
-                                <a class="agi-btn" href="hr-and-administrative.html">Read More</a>
+                                <a class="agi-btn" href="../solutions/hr-process-automation-cv-read/">Read More</a>
                             </div>
                         </div>
                     </div>
@@ -221,7 +221,7 @@
                                     </span>
 
                                 </p>
-                                <a class="agi-btn" href="bank-and-credit-card-statement.html">Read More</a>
+                                <a class="agi-btn" href="../solutions/bank-credit-card-statements-parser/">Read More</a>
                             </div>
                         </div>
                     </div>
@@ -239,7 +239,7 @@
                                         one of the basic requirements in today's era.
                                     </span>
                                 </p>
-                                <a class="agi-btn" href="kyc-documents.html">Read More</a>
+                                <a class="agi-btn" href="../solutions/kyc-document-processing-parser/">Read More</a>
                             </div>
                         </div>
                     </div>
@@ -260,7 +260,7 @@
                         Learn the Cost of your <span class="blink"><b>AGI campaign</b></span> Right
                         Now!</h1>
                     <div class="text-center wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.2s">
-                        <a href="#" class="agi-btn">View All Pricing</a>
+                        <a href="../docbrains-campaign-pricing/" class="agi-btn">View All Pricing</a>
 
                     </div>
                 </div>
