--- a/how-docbrains-works/index.html
+++ b/how-docbrains-works/index.html
@@ -313,11 +313,11 @@
                         <div>
                             <ul class="footer-link">
                                 <li><a href="http://www.agibrains.com/">Home</a></li>
-                                <li><a href="../../how-docbrains-works/">How It Works</a></li>
-                                <li><a href="../../solutions/">Industry Solution</a></li>
-                                <li><a href="../../docbrains-campaign-pricing/">Pricing</a></li>
-                                <li><a href="../../blogs/">Blogs</a></li>
-                                <li><a href="../../contact-sales/">Contact Us</a></li>
+                                <li><a href="../how-docbrains-works/">How It Works</a></li>
+                                <li><a href="../solutions/">Industry Solution</a></li>
+                                <li><a href="../docbrains-campaign-pricing/">Pricing</a></li>
+                                <li><a href="../blogs/">Blogs</a></li>
+                                <li><a href="../contact-sales/">Contact Us</a></li>
                             </ul>
                         </div>
                     </div>
