--- a/contact-sales/index.html
+++ b/contact-sales/index.html
@@ -8,6 +8,7 @@
     <meta name="description"
         content="Our AGIBrains Team Is Dedicated to Answer Your Sales Questions. Fill in the Form and We’ll Get Back in Touch as Soon as Possible." />
     <meta name="keywords" content="" />
+    <link rel="canonical" href="https://agibrains.com/contact-sales/" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link
@@ -288,11 +289,11 @@
                         <div>
                             <ul class="footer-link">
                                 <li><a href="http://www.agibrains.com/">Home</a></li>
-                                <li><a href="../../how-docbrains-works/">How It Works</a></li>
-                                <li><a href="../../solutions/">Industry Solution</a></li>
-                                <li><a href="../../docbrains-campaign-pricing/">Pricing</a></li>
-                                <li><a href="../../blogs/">Blogs</a></li>
-                                <li><a href="../../contact-sales/">Contact Us</a></li>
+                                <li><a href="../how-docbrains-works/">How It Works</a></li>
+                                <li><a href="../solutions/">Industry Solution</a></li>
+                                <li><a href="../docbrains-campaign-pricing/">Pricing</a></li>
+                                <li><a href="../blogs/">Blogs</a></li>
+                                <li><a href="../contact-sales/">Contact Us</a></li>
                             </ul>
                         </div>
                     </div>
