--- a/solutions/index.html
+++ b/solutions/index.html
@@ -8,6 +8,8 @@
     <meta name="description"
         content="DocBrains, Data Extraction from Complex and Unstructured Documents Using Artificial Intelligence and Machine Learning. Support Different Document's Structure." />
     <meta name="keywords" content="" />
+    <link rel="canonical" href="https://agibrains.com/solutions/" />
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link
@@ -54,6 +56,9 @@
                 <!-- Navbar links -->
                 <div class="collapse navbar-collapse" id="collapsibleNavbar">
                     <ul class="navbar-nav ml-auto">
+                        <li class="nav-item">
+                            <a class="nav-link" href="../about-us/">About Us</a>
+                        </li>
                         <li class="nav-item">
                             <a class="nav-link" href="../how-docbrains-works/index.html">How It works</a>
                         </li>
@@ -279,7 +284,7 @@
                         <h5 class="footer-title">Menu </h5>
                         <div>
                             <ul class="footer-link">
-                                <li><a href="http://www.agibrains.com/">Home</a></li>
+                                <li><a href="../about-us/">About Us</a></li>
                                 <li><a href="../how-docbrains-works/">How It Works</a></li>
                                 <li><a href="../solutions/">Industry Solution</a></li>
                                 <li><a href="../docbrains-campaign-pricing/">Pricing</a></li>
