--- a/terms-privacy-policy/index.html
+++ b/terms-privacy-policy/index.html
@@ -8,6 +8,7 @@
     <meta name="description"
         content="See Pricing for BocBrains Systematic Data Extraction Software. Find All the Details on DocBrains Pricing in Order to Select the Plan That’s Best for Your Business" />
     <meta name="keywords" content="" />
+    <link rel="canonical" href="https://agibrains.com/terms-privacy-policy/" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link
@@ -389,12 +390,12 @@
                         <h5 class="footer-title">Menu </h5>
                         <div>
                             <ul class="footer-link">
-                                <li><a href="http://www.agibrains.com/">Home</a></li>
-                                <li><a href="../../how-docbrains-works/">How It Works</a></li>
-                                <li><a href="../../solutions/">Industry Solution</a></li>
-                                <li><a href="../../docbrains-campaign-pricing/">Pricing</a></li>
-                                <li><a href="../../blogs/">Blogs</a></li>
-                                <li><a href="../../contact-sales/">Contact Us</a></li>
+                                <li><a href="../about-us/">About Us</a></li>
+                                <li><a href="../how-docbrains-works/">How It Works</a></li>
+                                <li><a href="../solutions/">Industry Solution</a></li>
+                                <li><a href="../docbrains-campaign-pricing/">Pricing</a></li>
+                                <li><a href="../blogs/">Blogs</a></li>
+                                <li><a href="../contact-sales/">Contact Us</a></li>
                             </ul>
                         </div>
                     </div>
@@ -403,10 +404,12 @@
                         <div>
                             <ul class="footer-link">
                                 <li><a href="../solutions/pdf-invoice-processing-account-payable/">Invoicing</a></li>
-                                <li><a href="../solutions/shipping-delivery-orders-processing/">Shipping and Delivery</a></li>
+                                <li><a href="../solutions/shipping-delivery-orders-processing/">Shipping and
+                                        Delivery</a></li>
                                 <li><a href="../solutions/legal-documents-processing/">Form Based Documents</a></li>
                                 <li><a href="../solutions/hr-process-automation-cv-read/">Hr & Administrative</a></li>
-                                <li><a href="../solutions/bank-credit-card-statements-parser/">Bank & Credit Card Statements</a></li>
+                                <li><a href="../solutions/bank-credit-card-statements-parser/">Bank & Credit Card
+                                        Statements</a></li>
                                 <li><a href="../solutions/kyc-document-processing-parser/">KYC Documents</a></li>
 
                             </ul>
