--- a/about-us/index.html
+++ b/about-us/index.html
@@ -144,48 +144,40 @@
                 </div>
                 <div class="col-md-6 wow fadeInRight" data-wow-duration="1s" data-wow-delay="0.2s">
                     <p>
-                        We are a startup with an expert skill set and extraordinary mindset. We know how to create
-                        magic using Logic. We make a next generation intelligent systems platform using AI for which the
-                        Data is the building block. Our platforms make the large and small businesses solutions
-                        standout.Power of AI can bring to your business automated cult solutions, which will enhance
-                        User experiences and will add value to the future business driven by data and statistics.
+                        We are a startup with an expert skill set and extraordinary mindset. We know how to create magic
+                        using Logic. We make a next-generation intelligent systems platform using AI for which the Data
+                        is the building block. Our platforms make the large and small businesses solutions stand out.
+                        The power of AI can bring to your business automated cult solutions, which will enhance User
+                        experiences and will add value to the future business driven by data and statistics.
                         <br>
                         We will always be the backbone of your business in this digital world and take care of your
-                        Complex Business Process and turn it into a seamless,most productive and highly automotive
-                        process.Our team is made up of award winning Domain specialists, cloud consulting ,Market
-                        researcher, Analyst, Designer, Data scientist, Developer to get the desired outcome.We are a
-                        dynamic extended team committed to provide high quality services to its clients and
+                        Complex Business Process and turn it into a seamless, most productive and highly automotive
+                        process. Our team is made up of award-winning Domain specialists, cloud consulting, Market
+                        researcher, Analyst, Designer, Data scientist, Developer to get the desired outcome. We are a
+                        dynamic extended team committed to providing high-quality services to its clients
                     </p>
                 </div>
             </div>
             <div class="row mt-2">
                 <div class="col-md-12">
                     <p>
-                        an excellent working environment for associates. We all know and realize that the world is
-                        moving digitally and individuals invest the larger part of their time on the Internet. <br><br>
-                        We have made life easy for a wide variety of industries by providing next generation automation
-                        solutions in Warehouse management , Human capital management and Governance. <br><br>
-
+                        and an excellent working environment for associates. We all know and realize that the world is
+                        moving digitally and individuals invest the larger part of their time on the Internet.
+                        <br><br>
+                        We have made life easy for a wide variety of industries by providing next-generation automation
+                        solutions in Warehouse management, Human capital management and Governance.
+                        <br><br>
                         Presently it has turned out to be important for organizations to guarantee that they are
                         constantly noticeable on the Internet as a brand. We interface end users with your prospect
                         audience at the ideal time utilizing Digital presence and Digital Marketing helps you to achieve
-                        your desired company goal and an improved ROI.<br><br>
-
-                        As a fast growing Google Workspace Partner we are marking sure that each organisation employee
+                        your desired company goal and an improved ROI.
+                        <br><br>
+                        As a fast-growing Google Workspace Partner we are marking sure that each organisation employee
                         feels comfortable like we can work how we want, wherever we want, supported by flexible, easy to
                         use tools.
                         <br><br>
                         <b>Vision - </b>Transform digitalisation at its extreme level.<br><br>
-
-                       <b> Mission - </b>We are on mission to achieve our clients goal of digital transformation by applying
-                        machine learning and next generation automation techniques . With the use of unique algorithms,
-                        big data, and modern technology like machine learning, we translate data into real-time
-                        insights. Our Team thrives into various business domains like Invoice Processing, Healthcare,
-                        Billing, forecasting and have successfully delivered solutions across the globe. Our Mantra is
-                        to provide solutions, which scale to future needs for clients, cater with minimum cost,
-                        upgrades, and turn around.
-
-
+                        <b> Mission - </b> We are on a mission to achieve our client's goal of digital transformation by applying machine learning and next-generation automation techniques. With the use of unique algorithms, big data, and modern technology like machine learning, we translate data into real-time insights. Our Team thrives into various business domains like Invoice Processing, Healthcare, Billing, forecasting and have successfully delivered solutions across the globe. Our Mantra is to provide solutions, which scale to future needs for clients, cater with minimum cost, upgrades, and turn around.
                     </p>
                 </div>
             </div>
