--- a/about-us/index.html
+++ b/about-us/index.html
@@ -177,7 +177,7 @@
                         use tools.
                         <br><br>
                         <b>Vision - </b>Transform digitalisation at its extreme level.<br><br>
-                        <b> Mission - </b> We are on a mission to achieve our client's goal of digital transformation by applying machine learning and next-generation automation techniques. With the use of unique algorithms, big data, and modern technology like machine learning, we translate data into real-time insights. Our Team thrives into various business domains like Invoice Processing, Healthcare, Billing, forecasting and have successfully delivered solutions across the globe. Our Mantra is to provide solutions, which scale to future needs for clients, cater with minimum cost, upgrades, and turn around. <br>
+                        <b> Mission - </b> We are on a mission to achieve our client's goal of digital transformation by applying machine learning and next-generation automation techniques. With the use of unique algorithms, big data, and modern technology like machine learning, we translate data into real-time insights. Our Team thrives into various business domains like Invoice Processing, Healthcare, Billing, forecasting and have successfully delivered solutions across the globe. Our Mantra is to provide solutions, which scale to future needs for clients, cater with minimum cost, upgrades, and turn around. <br><br>
                     </p>
                 </div>
             </div>
