--- a/solutions/bank-credit-card-statements-parser/index.html
+++ b/solutions/bank-credit-card-statements-parser/index.html
@@ -8,6 +8,7 @@
     <meta name="description"
         content="DocBrains Is Bank Statement Parser Helping You to Extract Data Which Is Trapped in PDF Bank Statements & Credit Card Statements and Physical Images. AI Based-Document Digital Processing." />
     <meta name="keywords" content="" />
+    <link rel="canonical" href="https://agibrains.com/solutions/bank-credit-card-statements-parser/" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link
@@ -54,6 +55,9 @@
                 <!-- Navbar links -->
                 <div class="collapse navbar-collapse" id="collapsibleNavbar">
                     <ul class="navbar-nav ml-auto">
+                        <li class="nav-item">
+                            <a class="nav-link" href="../../about-us/">About Us</a>
+                        </li>
                         <li class="nav-item">
                             <a class="nav-link" href="../../how-docbrains-works/">How It works</a>
                         </li>
@@ -277,7 +281,8 @@
                         <h5 class="footer-title">Menu </h5>
                         <div>
                             <ul class="footer-link">
-                                <li><a href="http://www.agibrains.com/">Home</a></li>
+                                
+                                <li><a href="../../about-us/">About Us</a></li>
                                 <li><a href="../../how-docbrains-works/">How It Works</a></li>
                                 <li><a href="../../solutions/">Industry Solution</a></li>
                                 <li><a href="../../docbrains-campaign-pricing/">Pricing</a></li>
