--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="description"
         content="BocBrains Provides High-Quality Services for You to Find, Capture, and Extract Data Automatically from Unstructured Documents/Images and Data Extraction Services. Digital Processing Makes It Feasible to Detect and Track Hundreds of Targets Rather Than Individual Detection" />
     <meta name="keywords" content="" />
+    <link rel="canonical" href="https://agibrains.com" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link
@@ -44,7 +45,7 @@
         <nav class="navbar navbar-expand-lg bg-light navbar-light pt-xl-3">
             <!-- Brand -->
             <div class="container">
-                <a class="navbar-brand" href="index.html"><img src="images/logo.png" alt="AGI" title="AGI Brain"
+                <a class="navbar-brand" href="#"><img src="images/logo.png" alt="AGI" title="AGI Brain"
                         class="img-fluid"></a>
                 <!-- Toggler/collapsibe Button -->
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
@@ -54,6 +55,9 @@
                 <!-- Navbar links -->
                 <div class="collapse navbar-collapse" id="collapsibleNavbar">
                     <ul class="navbar-nav ml-auto">
+                        <li class="nav-item">
+                            <a class="nav-link" href="../about-us/">About Us</a>
+                        </li>
                         <li class="nav-item">
                             <a class="nav-link" href="how-docbrains-works/">How It works</a>
                         </li>
@@ -402,7 +406,7 @@
                         <h5 class="footer-title">Menu </h5>
                         <div>
                             <ul class="footer-link">
-                                <li><a href="index.html">Home</a></li>
+                                <li><a href="../about-us/">About Us</a></li>
                                 <li><a href="how-docbrains-works/">How It Works</a></li>
                                 <li><a href="solutions/">Industry Solution</a></li>
                                 <li><a href="docbrains-campaign-pricing/">Pricing</a></li>
