--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <div class="collapse navbar-collapse" id="collapsibleNavbar">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item">
-                            <a class="nav-link" href="../about-us/">About Us</a>
+                            <a class="nav-link" href="about-us/">About Us</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="how-docbrains-works/">How It works</a>
@@ -406,7 +406,7 @@
                         <h5 class="footer-title">Menu </h5>
                         <div>
                             <ul class="footer-link">
-                                <li><a href="../about-us/">About Us</a></li>
+                                <li><a href="about-us/">About Us</a></li>
                                 <li><a href="how-docbrains-works/">How It Works</a></li>
                                 <li><a href="solutions/">Industry Solution</a></li>
                                 <li><a href="docbrains-campaign-pricing/">Pricing</a></li>
