--- a/about-us/index.html
+++ b/about-us/index.html
@@ -2,12 +2,13 @@
 <html lang="en">
 
 <head>
-    <title>DocBrains | AI-Based Document Parsing Software | About Us</title>
+    <title>About - AGI Brains </title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description"
-        content="AI/ML Technology-Based Data Extraction from Complex Document, How It Works and How to Use It for Various Documents & Reports." />
+        content="Our Mission Is to Transform Digitalisation at Its Extreme Level to Master the Complexities of a Digital World." />
     <meta name="keywords" content="" />
+    <link rel="canonical" href="https://agibrains.com/about-us" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link
