--- a/how-docbrains-works/index.html
+++ b/how-docbrains-works/index.html
@@ -101,7 +101,7 @@
                             <a class="nav-link" href="../contact-sales/">contact Us</a>
                         </li>
                         <li class="nav-item">
-                            <a class="agi-btn" href="#"> <i class="fa fa-user-circle-o" aria-hidden="true"></i>
+                            <a class="agi-btn" href="../contact-sales/"> <i class="fa fa-user-circle-o" aria-hidden="true"></i>
                                 Login</a>
                         </li>
                     </ul>
