--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description"
-        content="BocBrains Provides High-Quality Services for You to Find, Capture, and Extract Data Automatically from Unstructured Documents/Images and Data Extraction Services. Digital Processing Makes It Feasible to Detect and Track Hundreds of Targets Rather Than Individual Detection" />
+        content="DocBrains Provides High-Quality Services for You to Find, Capture, and Extract Data Automatically from Unstructured Documents/Images and Data Extraction Services. Digital Processing Makes It Feasible to Detect and Track Hundreds of Targets Rather Than Individual Detection" />
     <meta name="keywords" content="" />
     <link rel="canonical" href="https://agibrains.com" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -582,7 +582,7 @@
         </div>
     </div>
     <!-- mobile orange button -->
-    <a href="contact.html" class="d-block d-md-none btn orangeBtn get-in-touch-mobile">Begin the free On-boarding</a>
+    <a href="https://www.agibrains.com/contact-sales/" class="d-block d-md-none btn orangeBtn get-in-touch-mobile">Begin the free On-boarding</a>
     <!--End mobile orange button -->
     <!-- End Pilot Button  -->
 
