--- a/about-us/index.html
+++ b/about-us/index.html
@@ -396,7 +396,8 @@
         </div>
     </div>
     <!-- mobile orange button -->
-    <a href="contact.html" class="d-block d-md-none btn orangeBtn get-in-touch-mobile">Begin the free On-boarding</a>
+        <a href="https://www.agibrains.com/contact-sales/" class="d-block d-md-none btn orangeBtn get-in-touch-mobile">Begin the free On-boarding</a>
+
     <!--End mobile orange button -->
     <!-- End Pilot Button  -->
 
