--- a/blogs/index.html
+++ b/blogs/index.html
@@ -5,7 +5,7 @@
     <title>AGI Brains Blogs</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="" />
+    <meta name="description" content="Check Out the Latest Blogs, Articles, Insights, and Other Resources on Artificial Intelligence and Machine Learning, Deep Learning on AGIBrains Blog Feed." />
     <meta name="keywords" content="" />
     <link rel="canonical" href="https://agibrains.com/blogs/" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
